Don't render region height if there is posts/this_post element inside the region. This is to prevent rendering too high region height as posts/this_post element can be very long or very short.

--- a/styles/sass/partials/_region.scss
+++ b/styles/sass/partials/_region.scss
@@ -14,6 +14,11 @@
 	width: 100%;
 }
 
+.upfront-region-container-has-posts .upfront-region,
+.upfront-region-container-has-this_post .upfront-region {
+  min-height: 0 !important;
+}
+
 .upfront-region-current {
 	z-index: 10;
 }
